--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2 class="text-center my-5 titulo">Administrador de Pacientes de Veterinaria</h2>
     <div class="container mt-5 p-5">
         <div id="contenido" class="row">
+            <!--aqui se manda la alerta-->
             <div class="col-md-6 agregar-cita">
                 <form id="nueva-cita">
                     <legend class="mb-4">Datos del Paciente</legend>
